--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,34 @@
-name: Build and Push Docker Image
+name: Deploy to Docker Hub
 
-# Se activará cuando se empujen cambios a la rama 'master'
 on:
   push:
     branches:
-      - master
+      - main  # Cambia esto si tu rama principal tiene otro nombre
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Paso 1: Verificar el código del repositorio
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      # Paso 2: Configurar Docker
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-      # Paso 3: Construir la imagen Docker
-      - name: Build Docker image
-        run: docker build . -t silenthill2024/calculadora-docker:latest
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Paso 4: Iniciar sesión en Docker Hub y subir la imagen
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: silenthill2024/calculadora:latest   # Cambia 'your-image-name' por el nombre de tu imagen
 
-      # Paso 5: Subir la imagen a Docker Hub
-      - name: Push Docker image
-        run: docker push silenthill2024/calculadora-docker:latest
+    - name: Logout from Docker Hub
+      run: docker logout
+
